tests/fixtures/invalid/cast-space.php
<?php declare(strict_types=1);

$x = (bool) 23;
